--- a/src/componentes/perfil/profile.css
+++ b/src/componentes/perfil/profile.css
@@ -20,3 +20,13 @@
     box-shadow: 0px 4px 5px #ddd;
     border-radius: 20px;
 }
+.overflow-ellipsis {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+button:disabled {
+    background-color: rgba(102, 107, 119, 0.7) !important;
+    color: rgba(193, 190, 190, 0.6) !important;
+}
